# SwatchBooker

./: .gitignore  README.md  msgfmt.py  pyproject.toml  setup.py
debian/: changelog  control  copyright  rules
packaging/: build-macos.sh  build-windows.bat  sbconvertor.spec  swatchbooker.iss  swatchbooker.spec
src/: sbcommon.py  sbconvert.py  sbconvertor.pyw  swatchbooker.pyw
src/swatchbook/: __init__.py  color.py  icc.py  lcms2.py
src/swatchbook/codecs/: __init__.py  adobe_acb.py  adobe_acf.py  adobe_aco.py  adobe_act.py  adobe_ase.py  adobe_bcf.py  adobe_clr.py  adobe_grd.py  adobe_pat.py  autocad_acb.py  colorschemer.py  corel_cpl.py  corel_xml.py  gimp_ggr.py  gimp_gpl.py  gimp_pat_PIL.py  icc_nmcl.py  ooo_sob.py  ooo_soc.py  ooo_sog.py  quark_qcl.py  ral_bcs.py  riff_pal.py  sbz.py  scribus.py  viva_xml.py  xara_jcw.py
src/swatchbook/websvc/: __init__.py  dtpstudio.py  munsell.py  pantone.py
tests/: conftest.py  test_color_math.py  test_data_model.py  test_icc.py  test_integration.py  test_sorted_dict.py  test_translations.py
tests/test_codecs/: test_adobe_ase.py  test_all_importable.py  test_gimp_gpl.py  test_html.py  test_ooo_soc.py  test_registry.py  test_sbz.py
