[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swatchbooker"
version = "0.8"
description = "Swatch book editor and format converter"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Olivier Berten", email = "olivier.berten@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "PySide6>=6.5,<6.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"swatchbook" = ["Fogra27L.icm"]
"swatchbook.websvc" = ["*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
